tests/snapshots/shopping_list_characterization_test__single_recipe_human.snap
---
source: tests/shopping_list_characterization_test.rs
expression: "run(&base_fixture(), &[\"pasta.cook\"])"
---
[produce]
tomatoes  3
garlic    2 cloves
[dairy]
milk      500 ml
[dry goods]
pasta     200 g
flour     200 g
[condiments]
olive oil 2 tbsp
[spices]
salt      1 tsp
[other]
water     2 l
