tests/snapshots/shopping_list_characterization_test__yaml_plain_output.snap
---
source: tests/shopping_list_characterization_test.rs
expression: "run(&base_fixture(), &[\"-f\", \"yaml\", \"--plain\", \"pasta.cook\", \"salad.cook\"])"
---
- name: pasta
  quantity:
  - value:
      type: number
      value:
        type: regular
        value: 200.0
    unit: g
- name: water
  quantity:
  - value:
      type: number
      value:
        type: regular
        value: 2.0
    unit: l
- name: salt
  quantity:
  - value:
      type: number
      value:
        type: regular
        value: 2.0
    unit: tsp
- name: garlic
  quantity:
  - value:
      type: number
      value:
        type: regular
        value: 2.0
    unit: cloves
- name: olive oil
  quantity:
  - value:
      type: number
      value:
        type: regular
        value: 3.0
    unit: tbsp
- name: tomatoes
  quantity:
  - value:
      type: number
      value:
        type: regular
        value: 5.0
    unit: null
- name: flour
  quantity:
  - value:
      type: number
      value:
        type: regular
        value: 1.0
    unit: cup
  - value:
      type: number
      value:
        type: regular
        value: 200.0
    unit: g
- name: milk
  quantity:
  - value:
      type: number
      value:
        type: regular
        value: 1.0
    unit: l
  - value:
      type: number
      value:
        type: regular
        value: 500.0
    unit: ml
- name: lettuce
  quantity:
  - value:
      type: number
      value:
        type: regular
        value: 1.0
    unit: head
